--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,6 @@
     "require": {
         "apache": "2.4.*",
         "nginx": "1.8.1",
-        "php": "5.6.*",
+        "php": "^5.5 || ^7.0",
     }
 }
