--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,5 @@
 {
     "require": {
-        "apache": "2.4.*",
-        "nginx": "1.8.1",
-        "php": "^5.5 || ^7.0",
+        "php": ">=5.5.*",
     }
 }
